振り返り追記

--- a/振り返り.md
+++ b/振り返り.md
@@ -9,15 +9,25 @@
 - **vue-router(v4.2.5)**
   - ~/router/index.ts でルーティング設定を定義
   - 画面遷移や URL パラメーターの取得
+  - リダイレクト処理の実装
+  - ナビゲーションガードの実装
 - **Vuetify(v3.4.8)**
   - CSS フレームワーク
-    - v-container, v-row, v-col によるグリッドレイアウト
-    - v-card, v-card-title, v-card-actions などを使ったカードデザイン
-    - v-btn
-    - v-date-picker による DatePicker の実装
-    - v-menu でクリックしよる開閉するメニュー要素の実装
+  - v-container, v-row, v-col によるグリッドレイアウト
+  - v-card, v-card-title, v-card-actions などを使ったカードデザイン
+  - v-btn や v-icon でボタンやアイコンの実装
+  - v-date-picker による DatePicker の実装
+  - v-menu でクリックにより開閉するメニュー要素の実装
+  - v-sheet(margin、padding, flex 関係, 背景色の指定など)
+  - ヘルパークラスの利用
 - **Axios**
   - Google Books API へのリクエストで使用
 - **Vite**
   - ビルドツール。
   - 環境構築は`Vue CLI`の`vue create`コマンドではなく、`Vite`の`npm create vite`コマンドから初期構築を行い、その後に npm コマンドで vue-router や Vuetify などを追加した。
+- **firebase**
+  - 認証機能で Authentication を利用
+- **vuex(4.1.0)**
+  - 状態管理ライブラリ
+  - state, mutations, actions, modules など一通り触れた。
+  - TypeScript 環境では vuex を import すると IDE 上で型定義エラーがでてしまう現象が発生していたが、型定義ファイルの追加や tsconfig.json に追記を行いこれに対応した
