--- a/振り返り.md
+++ b/振り返り.md
@@ -25,6 +25,8 @@
 - **Vite**
   - ビルドツール。
   - 環境構築は`Vue CLI`の`vue create`コマンドではなく、`Vite`の`npm create vite`コマンドから初期構築を行い、その後に npm コマンドで vue-router や Vuetify などを追加した。
+  - Vite 環境における環境変数の定義
+    - 環境変数ファイル(.env.[環境名].local)の作成や、環境変数の型定義を実施
 - **firebase**
   - 認証機能で Authentication を利用
 - **vuex(4.1.0)**
