振り返り追記3

--- a/振り返り.md
+++ b/振り返り.md
@@ -29,6 +29,9 @@
     - 環境変数ファイル(.env.[環境名].local)の作成や、環境変数の型定義を実施
 - **firebase**
   - 認証機能で Authentication を利用
+  - NoSQL データベースとして Firestore を利用
+    - CRUD 操作の実装
+    - where, limit による絞り込み処理など利用
 - **vuex(4.1.0)**
   - 状態管理ライブラリ
   - state, mutations, actions, modules など一通り触れた。
