振り返り追記4

--- a/振り返り.md
+++ b/振り返り.md
@@ -14,7 +14,7 @@
 - **Vuetify(v3.4.8)**
   - CSS フレームワーク
   - v-container, v-row, v-col によるグリッドレイアウト
-  - v-card, v-card-title, v-card-actions などを使ったカードデザイン
+  - v-card, v-card-title, v-card-subtitle, v-card-actions などを使ったカードデザイン
   - v-btn や v-icon でボタンやアイコンの実装
   - v-date-picker による DatePicker の実装
   - v-menu でクリックにより開閉するメニュー要素の実装
@@ -28,7 +28,7 @@
   - Vite 環境における環境変数の定義
     - 環境変数ファイル(.env.[環境名].local)の作成や、環境変数の型定義を実施
 - **firebase**
-  - 認証機能で Authentication を利用
+  - ログイン認証機能で Authentication を利用
   - NoSQL データベースとして Firestore を利用
     - CRUD 操作の実装
     - where, limit による絞り込み処理など利用
@@ -36,3 +36,6 @@
   - 状態管理ライブラリ
   - state, mutations, actions, modules など一通り触れた。
   - TypeScript 環境では vuex を import すると IDE 上で型定義エラーがでてしまう現象が発生していたが、型定義ファイルの追加や tsconfig.json に追記を行いこれに対応した
+- **Netlify**
+  - ホスティングサービス
+  - Git と連携した自動デプロイを実施（URL は README を参照）
