振り返り追記

--- a/振り返り.md
+++ b/振り返り.md
@@ -20,6 +20,7 @@
   - v-menu でクリックにより開閉するメニュー要素の実装
   - v-sheet(margin、padding, flex 関係, 背景色の指定など)
   - ヘルパークラスの利用
+  - v-list
 - **Axios**
   - Google Books API へのリクエストで使用
 - **Vite**
@@ -39,3 +40,7 @@
 - **Netlify**
   - ホスティングサービス
   - Git と連携した自動デプロイを実施（URL は README を参照）
+- **vue-history-state**
+  - ブラウザバックやリロードしたとき、画面の状態を復元できるライブラリ
+  - 検索結果一覧や読書日、感想メモの復元で利用
+  - Doc: https://qiita.com/hidekatsu-izuno/items/8abad0c1bb559490d65b
