feat: ログイン画面、ユーザー作成画面にバリデーションを追加

--- a/振り返り.md
+++ b/振り返り.md
@@ -21,6 +21,7 @@
   - v-sheet(margin、padding, flex 関係, 背景色の指定など)
   - ヘルパークラスの利用
   - v-list
+  - v-form によるバリデーションの実装
 - **Axios**
   - Google Books API へのリクエストで使用
 - **Vite**
@@ -29,8 +30,8 @@
   - Vite 環境における環境変数の定義
     - 環境変数ファイル(.env.[環境名].local)の作成や、環境変数の型定義を実施
 - **firebase**
-  - ログイン認証機能で Authentication を利用
-  - NoSQL データベースとして Firestore を利用
+  - **Authentication**: ログイン認証機能で利用
+  - **Firestore**: NoSQL データベースとしてユーザーごとの読書データを記録
     - CRUD 操作の実装
     - where, limit による絞り込み処理など利用
 - **vuex(4.1.0)**
